<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stair_alerts</name>
  <version>0.0.1</version> <!-- Updated version -->
  <description>A ROS 2 package for stair alerts</description> <!-- Updated description -->
  <maintainer email="sim30217@gmail.com">scsim</maintainer>
  <license>Apache-2.0</license> <!-- Updated license, adjust as needed -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ghost_manager_interfaces</depend> <!-- Added dependency for the Heartbeat message -->
  <depend>ament_index_cpp</depend>

  <build_depend>ament_cmake</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
